# wiztree-metafile

./: Cargo.toml  README.md  justfile
.github/workflows/: release.yml  test.yml
src/: analyzer.rs  collector.rs  config.rs  error.rs  lib.rs  link_handler.rs  main.rs  processor.rs  walker.rs
src/output/: json.rs  metafile.rs  mod.rs  text.rs
src/traversal/: breadth_first.rs  depth_first.rs  mod.rs
