[package]
name = "wiztree-metafile"
version = "0.1.0"
edition = "2021"

[lib]
name = "file_analyzer"
path = "src/lib.rs"

[[bin]]
name = "file-analyzer"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
thiserror = "1.0"
rayon = "1.10"
crossbeam-channel = "0.5"
num_cpus = "1.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3.0"

[features]
default = []
progress = ["indicatif"]

[dependencies.indicatif]
version = "0.17"
optional = true
