[package]
name = "wiztree-metafile"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "wiztree-metafile"
repository = "https://github.com/ahaoboy/wiztree-metafile"
homepage = "https://github.com/ahaoboy/wiztree-metafile"
authors = ["ahaoboy"]
include = ["/src", "/Cargo.toml", "/README.md"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-metafile = "0.1"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
rayon = "1"
crossbeam-channel = "0.5"
num_cpus = "1"

[profile.release]
debug = false
lto = true
strip = true
opt-level = 3
codegen-units = 1

[profile.bloaty]
debug = true
lto = false
strip = false
inherits = 'release'
